// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressStepperSkeleton Snapshots ProgressStepperSkeleton animate snapshot 1`] = `
<DocumentFragment>
  .c2 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c2.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c2.variant--circle {
  width: 2.5rem;
  height: 2.5rem;
  border-radius: var(--bds-border-radius-circle);
}

.c2.variant--rect {
  width: 2.5rem;
  height: 2.5rem;
}

.c2.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c2.variant--rect.shape--squared {
  border-radius: 0;
}

.c2.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c2.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c2.variant--text.shape--squared {
  border-radius: 0;
}

.c3 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c3.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c3.variant--circle {
  width: 5.5rem;
  height: 1rem;
  border-radius: var(--bds-border-radius-circle);
}

.c3.variant--rect {
  width: 5.5rem;
  height: 1rem;
}

.c3.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c3.variant--rect.shape--squared {
  border-radius: 0;
}

.c3.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c3.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c3.variant--text.shape--squared {
  border-radius: 0;
}

.c4 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c4.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c4.variant--circle {
  width: 100%;
  height: 0.125rem;
  border-radius: var(--bds-border-radius-circle);
}

.c4.variant--rect {
  width: 100%;
  height: 0.125rem;
}

.c4.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c4.variant--rect.shape--squared {
  border-radius: 0;
}

.c4.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c4.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c4.variant--text.shape--squared {
  border-radius: 0;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
}

.c0 .progress-step-connector {
  position: absolute;
  left: calc(-50% + var(--bds-sizes-size-24));
  right: calc(50% + var(--bds-sizes-size-24));
  top: var(--bds-sizes-size-36);
  bottom: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0.5rem 0px;
  margin: 0.5rem;
}

.c1 .indicator {
  margin-bottom: 0.5rem;
}

.c1 .heading {
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
}

.c1 .caption {
  margin-top: 0.3125rem;
  margin-bottom: 0.3125rem;
}

.c1.c1.c1.skeleton--step {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  position: relative;
  padding: 0.5rem 0;
  margin: 0.25rem 0;
  min-height: 5.25rem;
}

.c1.c1.c1.skeleton--step .label-group {
  margin-left: 1.5rem;
  margin-top: 0.75rem;
}

<div
    class="c0 progress-stepper--skeleton size--large direction--row"
  >
    <div
      style="position: relative; width: 100%;"
    >
      <span
        class="c1"
      >
        <div
          class="c2 variant--circle shape--rounded indicator style--animated"
          height="2.5rem"
          width="2.5rem"
        />
        <div
          class="c3 variant--rect shape--rounded heading style--animated"
          height="size_16"
          width="size_88"
        />
      </span>
    </div>
    <div
      style="position: relative; width: 100%;"
    >
      <span
        class="c1"
      >
        <div
          class="c2 variant--circle shape--rounded indicator style--animated"
          height="2.5rem"
          width="2.5rem"
        />
        <div
          class="c3 variant--rect shape--rounded heading style--animated"
          height="size_16"
          width="size_88"
        />
      </span>
      <div
        class="progress-step-connector"
      >
        <div
          class="c4 variant--rect shape--rounded style--animated"
          height="size_2"
          width="100%"
        />
      </div>
    </div>
    <div
      style="position: relative; width: 100%;"
    >
      <span
        class="c1"
      >
        <div
          class="c2 variant--circle shape--rounded indicator style--animated"
          height="2.5rem"
          width="2.5rem"
        />
        <div
          class="c3 variant--rect shape--rounded heading style--animated"
          height="size_16"
          width="size_88"
        />
      </span>
      <div
        class="progress-step-connector"
      >
        <div
          class="c4 variant--rect shape--rounded style--animated"
          height="size_2"
          width="100%"
        />
      </div>
    </div>
    <div
      style="position: relative; width: 100%;"
    >
      <span
        class="c1"
      >
        <div
          class="c2 variant--circle shape--rounded indicator style--animated"
          height="2.5rem"
          width="2.5rem"
        />
        <div
          class="c3 variant--rect shape--rounded heading style--animated"
          height="size_16"
          width="size_88"
        />
      </span>
      <div
        class="progress-step-connector"
      >
        <div
          class="c4 variant--rect shape--rounded style--animated"
          height="size_2"
          width="100%"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressStepperSkeleton Snapshots ProgressStepperSkeleton default snapshot 1`] = `
<DocumentFragment>
  .c2 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c2.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c2.variant--circle {
  width: 2.5rem;
  height: 2.5rem;
  border-radius: var(--bds-border-radius-circle);
}

.c2.variant--rect {
  width: 2.5rem;
  height: 2.5rem;
}

.c2.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c2.variant--rect.shape--squared {
  border-radius: 0;
}

.c2.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c2.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c2.variant--text.shape--squared {
  border-radius: 0;
}

.c3 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c3.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c3.variant--circle {
  width: 5.5rem;
  height: 1rem;
  border-radius: var(--bds-border-radius-circle);
}

.c3.variant--rect {
  width: 5.5rem;
  height: 1rem;
}

.c3.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c3.variant--rect.shape--squared {
  border-radius: 0;
}

.c3.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c3.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c3.variant--text.shape--squared {
  border-radius: 0;
}

.c4 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c4.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c4.variant--circle {
  width: 100%;
  height: 0.125rem;
  border-radius: var(--bds-border-radius-circle);
}

.c4.variant--rect {
  width: 100%;
  height: 0.125rem;
}

.c4.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c4.variant--rect.shape--squared {
  border-radius: 0;
}

.c4.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c4.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c4.variant--text.shape--squared {
  border-radius: 0;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
}

.c0 .progress-step-connector {
  position: absolute;
  left: calc(-50% + var(--bds-sizes-size-24));
  right: calc(50% + var(--bds-sizes-size-24));
  top: var(--bds-sizes-size-36);
  bottom: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0.5rem 0px;
  margin: 0.5rem;
}

.c1 .indicator {
  margin-bottom: 0.5rem;
}

.c1 .heading {
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
}

.c1 .caption {
  margin-top: 0.3125rem;
  margin-bottom: 0.3125rem;
}

.c1.c1.c1.skeleton--step {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  position: relative;
  padding: 0.5rem 0;
  margin: 0.25rem 0;
  min-height: 5.25rem;
}

.c1.c1.c1.skeleton--step .label-group {
  margin-left: 1.5rem;
  margin-top: 0.75rem;
}

<div
    class="c0 progress-stepper--skeleton size--large direction--row"
  >
    <div
      style="position: relative; width: 100%;"
    >
      <span
        class="c1"
      >
        <div
          class="c2 variant--circle shape--rounded indicator style--default"
          height="2.5rem"
          width="2.5rem"
        />
        <div
          class="c3 variant--rect shape--rounded heading style--default"
          height="size_16"
          width="size_88"
        />
      </span>
    </div>
    <div
      style="position: relative; width: 100%;"
    >
      <span
        class="c1"
      >
        <div
          class="c2 variant--circle shape--rounded indicator style--default"
          height="2.5rem"
          width="2.5rem"
        />
        <div
          class="c3 variant--rect shape--rounded heading style--default"
          height="size_16"
          width="size_88"
        />
      </span>
      <div
        class="progress-step-connector"
      >
        <div
          class="c4 variant--rect shape--rounded style--default"
          height="size_2"
          width="100%"
        />
      </div>
    </div>
    <div
      style="position: relative; width: 100%;"
    >
      <span
        class="c1"
      >
        <div
          class="c2 variant--circle shape--rounded indicator style--default"
          height="2.5rem"
          width="2.5rem"
        />
        <div
          class="c3 variant--rect shape--rounded heading style--default"
          height="size_16"
          width="size_88"
        />
      </span>
      <div
        class="progress-step-connector"
      >
        <div
          class="c4 variant--rect shape--rounded style--default"
          height="size_2"
          width="100%"
        />
      </div>
    </div>
    <div
      style="position: relative; width: 100%;"
    >
      <span
        class="c1"
      >
        <div
          class="c2 variant--circle shape--rounded indicator style--default"
          height="2.5rem"
          width="2.5rem"
        />
        <div
          class="c3 variant--rect shape--rounded heading style--default"
          height="size_16"
          width="size_88"
        />
      </span>
      <div
        class="progress-step-connector"
      >
        <div
          class="c4 variant--rect shape--rounded style--default"
          height="size_2"
          width="100%"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressStepperSkeleton Snapshots ProgressStepperSkeleton has caption options 1`] = `
<DocumentFragment>
  .c2 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c2.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c2.variant--circle {
  width: 2.5rem;
  height: 2.5rem;
  border-radius: var(--bds-border-radius-circle);
}

.c2.variant--rect {
  width: 2.5rem;
  height: 2.5rem;
}

.c2.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c2.variant--rect.shape--squared {
  border-radius: 0;
}

.c2.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c2.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c2.variant--text.shape--squared {
  border-radius: 0;
}

.c3 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c3.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c3.variant--circle {
  width: 5.5rem;
  height: 1rem;
  border-radius: var(--bds-border-radius-circle);
}

.c3.variant--rect {
  width: 5.5rem;
  height: 1rem;
}

.c3.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c3.variant--rect.shape--squared {
  border-radius: 0;
}

.c3.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c3.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c3.variant--text.shape--squared {
  border-radius: 0;
}

.c4 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c4.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c4.variant--circle {
  width: 8rem;
  height: 0.875rem;
  border-radius: var(--bds-border-radius-circle);
}

.c4.variant--rect {
  width: 8rem;
  height: 0.875rem;
}

.c4.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c4.variant--rect.shape--squared {
  border-radius: 0;
}

.c4.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c4.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c4.variant--text.shape--squared {
  border-radius: 0;
}

.c5 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c5.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c5.variant--circle {
  width: 100%;
  height: 0.125rem;
  border-radius: var(--bds-border-radius-circle);
}

.c5.variant--rect {
  width: 100%;
  height: 0.125rem;
}

.c5.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c5.variant--rect.shape--squared {
  border-radius: 0;
}

.c5.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c5.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c5.variant--text.shape--squared {
  border-radius: 0;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
}

.c0 .progress-step-connector {
  position: absolute;
  left: calc(-50% + var(--bds-sizes-size-24));
  right: calc(50% + var(--bds-sizes-size-24));
  top: var(--bds-sizes-size-36);
  bottom: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0.5rem 0px;
  margin: 0.5rem;
}

.c1 .indicator {
  margin-bottom: 0.5rem;
}

.c1 .heading {
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
}

.c1 .caption {
  margin-top: 0.3125rem;
  margin-bottom: 0.3125rem;
}

.c1.c1.c1.skeleton--step {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  position: relative;
  padding: 0.5rem 0;
  margin: 0.25rem 0;
  min-height: 5.25rem;
}

.c1.c1.c1.skeleton--step .label-group {
  margin-left: 1.5rem;
  margin-top: 0.75rem;
}

<div
    class="c0 progress-stepper--skeleton size--large direction--row"
  >
    <div
      style="position: relative; width: 100%;"
    >
      <span
        class="c1"
      >
        <div
          class="c2 variant--circle shape--rounded indicator style--default"
          height="2.5rem"
          width="2.5rem"
        />
        <div
          class="c3 variant--rect shape--rounded heading style--default"
          height="size_16"
          width="size_88"
        />
        <div
          class="c4 variant--rect shape--rounded caption style--default"
          height="size_14"
          width="size_128"
        />
      </span>
    </div>
    <div
      style="position: relative; width: 100%;"
    >
      <span
        class="c1"
      >
        <div
          class="c2 variant--circle shape--rounded indicator style--default"
          height="2.5rem"
          width="2.5rem"
        />
        <div
          class="c3 variant--rect shape--rounded heading style--default"
          height="size_16"
          width="size_88"
        />
        <div
          class="c4 variant--rect shape--rounded caption style--default"
          height="size_14"
          width="size_128"
        />
      </span>
      <div
        class="progress-step-connector"
      >
        <div
          class="c5 variant--rect shape--rounded style--default"
          height="size_2"
          width="100%"
        />
      </div>
    </div>
    <div
      style="position: relative; width: 100%;"
    >
      <span
        class="c1"
      >
        <div
          class="c2 variant--circle shape--rounded indicator style--default"
          height="2.5rem"
          width="2.5rem"
        />
        <div
          class="c3 variant--rect shape--rounded heading style--default"
          height="size_16"
          width="size_88"
        />
        <div
          class="c4 variant--rect shape--rounded caption style--default"
          height="size_14"
          width="size_128"
        />
      </span>
      <div
        class="progress-step-connector"
      >
        <div
          class="c5 variant--rect shape--rounded style--default"
          height="size_2"
          width="100%"
        />
      </div>
    </div>
    <div
      style="position: relative; width: 100%;"
    >
      <span
        class="c1"
      >
        <div
          class="c2 variant--circle shape--rounded indicator style--default"
          height="2.5rem"
          width="2.5rem"
        />
        <div
          class="c3 variant--rect shape--rounded heading style--default"
          height="size_16"
          width="size_88"
        />
        <div
          class="c4 variant--rect shape--rounded caption style--default"
          height="size_14"
          width="size_128"
        />
      </span>
      <div
        class="progress-step-connector"
      >
        <div
          class="c5 variant--rect shape--rounded style--default"
          height="size_2"
          width="100%"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressStepperSkeleton Snapshots ProgressStepperSkeleton multiple steps 1`] = `
<DocumentFragment>
  .c2 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c2.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c2.variant--circle {
  width: 2.5rem;
  height: 2.5rem;
  border-radius: var(--bds-border-radius-circle);
}

.c2.variant--rect {
  width: 2.5rem;
  height: 2.5rem;
}

.c2.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c2.variant--rect.shape--squared {
  border-radius: 0;
}

.c2.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c2.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c2.variant--text.shape--squared {
  border-radius: 0;
}

.c3 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c3.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c3.variant--circle {
  width: 5.5rem;
  height: 1rem;
  border-radius: var(--bds-border-radius-circle);
}

.c3.variant--rect {
  width: 5.5rem;
  height: 1rem;
}

.c3.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c3.variant--rect.shape--squared {
  border-radius: 0;
}

.c3.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c3.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c3.variant--text.shape--squared {
  border-radius: 0;
}

.c4 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c4.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c4.variant--circle {
  width: 100%;
  height: 0.125rem;
  border-radius: var(--bds-border-radius-circle);
}

.c4.variant--rect {
  width: 100%;
  height: 0.125rem;
}

.c4.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c4.variant--rect.shape--squared {
  border-radius: 0;
}

.c4.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c4.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c4.variant--text.shape--squared {
  border-radius: 0;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
}

.c0 .progress-step-connector {
  position: absolute;
  left: calc(-50% + var(--bds-sizes-size-24));
  right: calc(50% + var(--bds-sizes-size-24));
  top: var(--bds-sizes-size-36);
  bottom: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0.5rem 0px;
  margin: 0.5rem;
}

.c1 .indicator {
  margin-bottom: 0.5rem;
}

.c1 .heading {
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
}

.c1 .caption {
  margin-top: 0.3125rem;
  margin-bottom: 0.3125rem;
}

.c1.c1.c1.skeleton--step {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  position: relative;
  padding: 0.5rem 0;
  margin: 0.25rem 0;
  min-height: 5.25rem;
}

.c1.c1.c1.skeleton--step .label-group {
  margin-left: 1.5rem;
  margin-top: 0.75rem;
}

<div
    class="c0 progress-stepper--skeleton size--large direction--row"
  >
    <div
      style="position: relative; width: 100%;"
    >
      <span
        class="c1"
      >
        <div
          class="c2 variant--circle shape--rounded indicator style--default"
          height="2.5rem"
          width="2.5rem"
        />
        <div
          class="c3 variant--rect shape--rounded heading style--default"
          height="size_16"
          width="size_88"
        />
      </span>
    </div>
    <div
      style="position: relative; width: 100%;"
    >
      <span
        class="c1"
      >
        <div
          class="c2 variant--circle shape--rounded indicator style--default"
          height="2.5rem"
          width="2.5rem"
        />
        <div
          class="c3 variant--rect shape--rounded heading style--default"
          height="size_16"
          width="size_88"
        />
      </span>
      <div
        class="progress-step-connector"
      >
        <div
          class="c4 variant--rect shape--rounded style--default"
          height="size_2"
          width="100%"
        />
      </div>
    </div>
    <div
      style="position: relative; width: 100%;"
    >
      <span
        class="c1"
      >
        <div
          class="c2 variant--circle shape--rounded indicator style--default"
          height="2.5rem"
          width="2.5rem"
        />
        <div
          class="c3 variant--rect shape--rounded heading style--default"
          height="size_16"
          width="size_88"
        />
      </span>
      <div
        class="progress-step-connector"
      >
        <div
          class="c4 variant--rect shape--rounded style--default"
          height="size_2"
          width="100%"
        />
      </div>
    </div>
    <div
      style="position: relative; width: 100%;"
    >
      <span
        class="c1"
      >
        <div
          class="c2 variant--circle shape--rounded indicator style--default"
          height="2.5rem"
          width="2.5rem"
        />
        <div
          class="c3 variant--rect shape--rounded heading style--default"
          height="size_16"
          width="size_88"
        />
      </span>
      <div
        class="progress-step-connector"
      >
        <div
          class="c4 variant--rect shape--rounded style--default"
          height="size_2"
          width="100%"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressStepperSkeleton Snapshots should test orientation and sizing 1`] = `
<DocumentFragment>
  .c2 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c2.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c2.variant--circle {
  width: 2.5rem;
  height: 2.5rem;
  border-radius: var(--bds-border-radius-circle);
}

.c2.variant--rect {
  width: 2.5rem;
  height: 2.5rem;
}

.c2.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c2.variant--rect.shape--squared {
  border-radius: 0;
}

.c2.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c2.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c2.variant--text.shape--squared {
  border-radius: 0;
}

.c3 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c3.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c3.variant--circle {
  width: 5.5rem;
  height: 1rem;
  border-radius: var(--bds-border-radius-circle);
}

.c3.variant--rect {
  width: 5.5rem;
  height: 1rem;
}

.c3.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c3.variant--rect.shape--squared {
  border-radius: 0;
}

.c3.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c3.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c3.variant--text.shape--squared {
  border-radius: 0;
}

.c4 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c4.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c4.variant--circle {
  width: 100%;
  height: 0.125rem;
  border-radius: var(--bds-border-radius-circle);
}

.c4.variant--rect {
  width: 100%;
  height: 0.125rem;
}

.c4.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c4.variant--rect.shape--squared {
  border-radius: 0;
}

.c4.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c4.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c4.variant--text.shape--squared {
  border-radius: 0;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
}

.c0 .progress-step-connector {
  position: absolute;
  left: calc(-50% + var(--bds-sizes-size-24));
  right: calc(50% + var(--bds-sizes-size-24));
  top: var(--bds-sizes-size-36);
  bottom: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0.5rem 0px;
  margin: 0.5rem;
}

.c1 .indicator {
  margin-bottom: 0.5rem;
}

.c1 .heading {
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
}

.c1 .caption {
  margin-top: 0.3125rem;
  margin-bottom: 0.3125rem;
}

.c1.c1.c1.skeleton--step {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  position: relative;
  padding: 0.5rem 0;
  margin: 0.25rem 0;
  min-height: 5.25rem;
}

.c1.c1.c1.skeleton--step .label-group {
  margin-left: 1.5rem;
  margin-top: 0.75rem;
}

<div
    class="c0 progress-stepper--skeleton size--large direction--row"
  >
    <div
      style="position: relative; width: 100%;"
    >
      <span
        class="c1"
      >
        <div
          class="c2 variant--circle shape--rounded indicator style--default"
          height="2.5rem"
          width="2.5rem"
        />
        <div
          class="c3 variant--rect shape--rounded heading style--default"
          height="size_16"
          width="size_88"
        />
      </span>
    </div>
    <div
      style="position: relative; width: 100%;"
    >
      <span
        class="c1"
      >
        <div
          class="c2 variant--circle shape--rounded indicator style--default"
          height="2.5rem"
          width="2.5rem"
        />
        <div
          class="c3 variant--rect shape--rounded heading style--default"
          height="size_16"
          width="size_88"
        />
      </span>
      <div
        class="progress-step-connector"
      >
        <div
          class="c4 variant--rect shape--rounded style--default"
          height="size_2"
          width="100%"
        />
      </div>
    </div>
    <div
      style="position: relative; width: 100%;"
    >
      <span
        class="c1"
      >
        <div
          class="c2 variant--circle shape--rounded indicator style--default"
          height="2.5rem"
          width="2.5rem"
        />
        <div
          class="c3 variant--rect shape--rounded heading style--default"
          height="size_16"
          width="size_88"
        />
      </span>
      <div
        class="progress-step-connector"
      >
        <div
          class="c4 variant--rect shape--rounded style--default"
          height="size_2"
          width="100%"
        />
      </div>
    </div>
    <div
      style="position: relative; width: 100%;"
    >
      <span
        class="c1"
      >
        <div
          class="c2 variant--circle shape--rounded indicator style--default"
          height="2.5rem"
          width="2.5rem"
        />
        <div
          class="c3 variant--rect shape--rounded heading style--default"
          height="size_16"
          width="size_88"
        />
      </span>
      <div
        class="progress-step-connector"
      >
        <div
          class="c4 variant--rect shape--rounded style--default"
          height="size_2"
          width="100%"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressStepperSkeleton Snapshots should test orientation and sizing 2`] = `
<DocumentFragment>
  .c3 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c3.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c3.variant--circle {
  width: 5.5rem;
  height: 1rem;
  border-radius: var(--bds-border-radius-circle);
}

.c3.variant--rect {
  width: 5.5rem;
  height: 1rem;
}

.c3.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c3.variant--rect.shape--squared {
  border-radius: 0;
}

.c3.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c3.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c3.variant--text.shape--squared {
  border-radius: 0;
}

.c2 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c2.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c2.variant--circle {
  width: 2.625rem;
  height: 2.625rem;
  border-radius: var(--bds-border-radius-circle);
}

.c2.variant--rect {
  width: 2.625rem;
  height: 2.625rem;
}

.c2.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c2.variant--rect.shape--squared {
  border-radius: 0;
}

.c2.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c2.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c2.variant--text.shape--squared {
  border-radius: 0;
}

.c4 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c4.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c4.variant--circle {
  width: 0.125rem;
  height: 100%;
  border-radius: var(--bds-border-radius-circle);
}

.c4.variant--rect {
  width: 0.125rem;
  height: 100%;
}

.c4.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c4.variant--rect.shape--squared {
  border-radius: 0;
}

.c4.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c4.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c4.variant--text.shape--squared {
  border-radius: 0;
}

.c0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.c0 .progress-step-connector {
  position: absolute;
  top: calc(-50% + var(--bds-sizes-size-12));
  bottom: calc(50% + var(--bds-sizes-size-48));
  left: var(--bds-sizes-size-20);
}

.c0.size--small .progress-step-connector {
  left: var(--bds-sizes-size-18);
  top: calc(-50% + var(--bds-sizes-size-12));
}

.c0.size--small .skeleton--step {
  min-height: 4.75rem !important;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0.5rem 0px;
  margin: 0.5rem;
}

.c1 .indicator {
  margin-bottom: 0.5rem;
}

.c1 .heading {
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
}

.c1 .caption {
  margin-top: 0.3125rem;
  margin-bottom: 0.3125rem;
}

.c1.c1.c1.skeleton--step {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  position: relative;
  padding: 0.5rem 0;
  margin: 0.25rem 0;
  min-height: 5.25rem;
}

.c1.c1.c1.skeleton--step .label-group {
  margin-left: 1.5rem;
  margin-top: 0.75rem;
}

<div
    class="c0 progress-stepper--skeleton size--large direction--column"
  >
    <div
      style="position: relative; width: 100%;"
    >
      <span
        class="c1 skeleton--step"
      >
        <div
          class="c2 variant--circle shape--rounded indicator style--default"
          height="2.625rem"
          width="2.625rem"
        />
        <div
          class="label-group"
        >
          <div
            class="c3 variant--rect shape--rounded heading style--default"
            height="size_16"
            width="size_88"
          />
        </div>
      </span>
    </div>
    <div
      style="position: relative; width: 100%;"
    >
      <span
        class="c1 skeleton--step"
      >
        <div
          class="c2 variant--circle shape--rounded indicator style--default"
          height="2.625rem"
          width="2.625rem"
        />
        <div
          class="label-group"
        >
          <div
            class="c3 variant--rect shape--rounded heading style--default"
            height="size_16"
            width="size_88"
          />
        </div>
      </span>
      <div
        class="progress-step-connector"
      >
        <div
          class="c4 variant--rect shape--rounded style--default"
          height="100%"
          width="size_2"
        />
      </div>
    </div>
    <div
      style="position: relative; width: 100%;"
    >
      <span
        class="c1 skeleton--step"
      >
        <div
          class="c2 variant--circle shape--rounded indicator style--default"
          height="2.625rem"
          width="2.625rem"
        />
        <div
          class="label-group"
        >
          <div
            class="c3 variant--rect shape--rounded heading style--default"
            height="size_16"
            width="size_88"
          />
        </div>
      </span>
      <div
        class="progress-step-connector"
      >
        <div
          class="c4 variant--rect shape--rounded style--default"
          height="100%"
          width="size_2"
        />
      </div>
    </div>
    <div
      style="position: relative; width: 100%;"
    >
      <span
        class="c1 skeleton--step"
      >
        <div
          class="c2 variant--circle shape--rounded indicator style--default"
          height="2.625rem"
          width="2.625rem"
        />
        <div
          class="label-group"
        >
          <div
            class="c3 variant--rect shape--rounded heading style--default"
            height="size_16"
            width="size_88"
          />
        </div>
      </span>
      <div
        class="progress-step-connector"
      >
        <div
          class="c4 variant--rect shape--rounded style--default"
          height="100%"
          width="size_2"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
